@@ -17,7 +17,6 @@
 package org.apache.solr.uninverting;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
@@ -78,8 +77,7 @@ public class TestUninvertingReader extends SolrTestCase {
     iw.close();
 
     DirectoryReader ir =
-        UninvertingReader.wrap(
-            DirectoryReader.open(dir), Collections.singletonMap("foo", Type.SORTED_SET_INTEGER));
+        UninvertingReader.wrap(DirectoryReader.open(dir), Map.of("foo", Type.SORTED_SET_INTEGER));
     LeafReader ar = ir.leaves().get(0).reader();
     SortedSetDocValues v = ar.getSortedSetDocValues("foo");
     assertEquals(2, v.getValueCount());
@@ -120,8 +118,7 @@ public class TestUninvertingReader extends SolrTestCase {
     iw.close();
 
     DirectoryReader ir =
-        UninvertingReader.wrap(
-            DirectoryReader.open(dir), Collections.singletonMap("foo", Type.SORTED_SET_FLOAT));
+        UninvertingReader.wrap(DirectoryReader.open(dir), Map.of("foo", Type.SORTED_SET_FLOAT));
     LeafReader ar = ir.leaves().get(0).reader();
 
     SortedSetDocValues v = ar.getSortedSetDocValues("foo");
@@ -163,8 +160,7 @@ public class TestUninvertingReader extends SolrTestCase {
     iw.close();
 
     DirectoryReader ir =
-        UninvertingReader.wrap(
-            DirectoryReader.open(dir), Collections.singletonMap("foo", Type.SORTED_SET_LONG));
+        UninvertingReader.wrap(DirectoryReader.open(dir), Map.of("foo", Type.SORTED_SET_LONG));
     LeafReader ar = ir.leaves().get(0).reader();
     SortedSetDocValues v = ar.getSortedSetDocValues("foo");
     assertEquals(2, v.getValueCount());
@@ -205,8 +201,7 @@ public class TestUninvertingReader extends SolrTestCase {
     iw.close();
 
     DirectoryReader ir =
-        UninvertingReader.wrap(
-            DirectoryReader.open(dir), Collections.singletonMap("foo", Type.SORTED_SET_DOUBLE));
+        UninvertingReader.wrap(DirectoryReader.open(dir), Map.of("foo", Type.SORTED_SET_DOUBLE));
     LeafReader ar = ir.leaves().get(0).reader();
     SortedSetDocValues v = ar.getSortedSetDocValues("foo");
     assertEquals(2, v.getValueCount());
